--- a/yj-web-platform/template/entering.html
+++ b/yj-web-platform/template/entering.html
@@ -5,6 +5,6 @@
 	<span>营业执照</span>
 	<span>联系电话</span>
 	<span>负责人</span>
-	<span>负责人ID</span>
-	<span>驾照类型</span>
+	<span>负责人电话</span>
+	<span>驾校ID</span>
 </div>                                                                                                    
