--- a/yj-web-platform/template/rePwd.html
+++ b/yj-web-platform/template/rePwd.html
@@ -4,6 +4,6 @@
 		<div class="error" ng-messages="repwd_form.businessLicenseId.$error" ng-messages-multiple>
 		    <div ng-message="required">请输入营业执照</div>
 	    </div>
-	    <button type="submit">提交</button>
+	    <button type="submit">重置密码</button>
 	</form>
 </div>
