--- a/yj-web-platform/template/getSiteInfo.html
+++ b/yj-web-platform/template/getSiteInfo.html
@@ -15,8 +15,8 @@
 			</div>
 		<br>
 		<lable>距离</lable>
-		<input type="text" ng-model="getSite.distcine" required name="distcine" placeholder="请输入范围" ng-minlength=1 />
-		<div class="error" ng-messages="getSiteInfo_form.distcine.$error" ng-messages-multiple>
+		<input type="text" ng-model="getSite.distance" required name="distance" placeholder="请输入范围" ng-minlength=1 />
+		<div class="error" ng-messages="getSiteInfo_form.distance.$error" ng-messages-multiple>
 				<div ng-message="required">sure you enter your distance</div>
 				<div ng-message="minlengtrh"> your password must be at least 1 characters</div>
 			</div>
