--- a/yi-web-driveschool/css/bootstrap/platform.css
+++ b/yi-web-driveschool/css/bootstrap/platform.css
@@ -13,93 +13,8 @@ legend { color:#000; }
 fieldset, img { border:0; } 
 button, input, select, textarea { font-size:100%; } 
 table { border-collapse:collapse; border-spacing:0; } 
-.addSchool{
-    width:70px;
-    height:70px;
-    border: 1px dashed black;
-    border-radius: 5px;
-    background-color: #FFA500;
-    color: white;
-}
-.sideList{
-	margin: 20px 0 0px 90px;
-}
-.schDetlie{
-	position:absolute;
-	top:20px;
-	left:90px;
-}
-.schDetlie span{
-	display: inline-block;
-	width:174px;
-	height: 50px;
-	line-height: 50px;
-	text-align: center;
-	border:1px solid black;
-}
-.sideList span input{
-	text-align: center;
-}
-.error div{
-	color: red;
-	font-size: 12px;
-	display: inline;
-}
-.myForm{
-	margin-left: 90px;
-	margin-top:5px;
-}
-.error{
-	display: inline;
-}
-.systemInit{
-	background-color:#87CEEB;
-	width: 100%;
-	height: 100%;
-}
-.propeller{
-	animation: 1.5s linear 0s normal none infinite rotate;
-   -moz-animation:1.5s linear 0s normal none infinite rotate;
-   -webkit-animation:1.5s linear 0s normal none infinite rotate;
-   -o-animation:1.5s linear 0s normal none infinite rotate;
-   -ms-animation:1.5s linear 0s normal none infinite rotate;
-}
-@keyframes rotate{
-  from{transform:rotate(0deg)}
-  to{transform:rotate(360deg)}
-}
- @-moz-keyframes rotate
-{
- from{transform:rotate(0deg)}
-  to{transform:rotate(360deg)}
-}
-
-@-webkit-keyframes rotate
-{
-from{transform:rotate(0deg)}
-  to{transform:rotate(360deg)}
-}
-
-@-o-keyframes rotate
-{
-from{transform:rotate(0deg)}
-  to{transform:rotate(360deg)}
-} 
-.side_view{
-	width: 500px;
-	position: absolute;
-	height: 436px;
-	left:50%;  
-    top:50%;  
-    margin:-218px 0 0 -250px;
-}
-.propeller{
-	position: absolute;
-	left: 20.4643172%;
-    top: 0.4%; 
-}
 .login{
-	background-image: url(../../img/282396.jpg);
+	background-image: url(../../img/285066.jpg);
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	width: 100%;
@@ -112,13 +27,20 @@ from{transform:rotate(0deg)}
 	top:45%;
 	left:15%;
 }
-.represent{
-	margin:0 0 5px 0;
-	padding:0.2em 0;
+.coach_rule span{
+	display: inline-block;
+	height:40px;
+	line-height: 40px;
+	width:170px;
+	text-align: center
 }
-.save_address{
-	width:60px;
-	height: 30px;
-	float: right;
-	margin-top: 40px
+#drop{
+	border:2px dashed #bbb;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+	padding:25px;
+	text-align:center;
+	font:20pt bold,"Vollkorn";
+	color:#bbb
 }
