--- a/yi-web-driveschool/template/login.html
+++ b/yi-web-driveschool/template/login.html
@@ -10,14 +10,14 @@
 			</div>
 			<br>
 			<label>password</label>
-			<input type="password" placeholder="Password"  name="password" ng-model="signin.password" ng-minlength=6 ng-maxlength=10 required />
+			<input type="password" placeholder="Password"  name="password" ng-model="signin.password" ng-minlength=1 ng-maxlength=20 required />
 			<div class="error" ng-messages="signin_form.name.$error" ng-messages-multiple>
 				<div ng-message="required">sure you enter your password</div>
 				<div ng-message="minlengtrh"> your password must be at least 6 characters</div>
 				<div ng-message="maxlength">your password can not be longer than 10 characters</div>
 			</div>
 
-			<button type="submit">Submit</button>
+			<button type="submit" ng-disabled="signin_form.$invalid">Submit</button>
 		</form>
 	</div>
 </section>
