--- a/yi-web-driveschool/template/muchcoach.html
+++ b/yi-web-driveschool/template/muchcoach.html
@@ -16,6 +16,7 @@
 				<coach-item ng-repeat="(key,coach) in coachList"></coach-item>
 			</tbody>
 		</table>
+		<button type="submit" ng-click="addAll()">确认提交</button>
 </div>
 <script src="./lib/shim.js"></script>
 <script src="./lib/jszip.js"></script>
