--- a/yi-web-driveschool/template/split.html
+++ b/yi-web-driveschool/template/split.html
@@ -2,5 +2,6 @@
 	<span><a href="/addsignal">添加单个教练</a></span>
 	<span><a href="/addmuch"> 批量添加教练</a></span>
     <span><a href="/addStutent">添加单个学员</span>
-	<span><a href="/addAllStu">批量添加学员</span> 
+	<span><a href="/addAllStu">批量添加学员</span>
+	<span><a href="/addAllCars">批量添加教练车</span> 
 </div>
