--- a/yi-web-driveschool/template/carsItem.html
+++ b/yi-web-driveschool/template/carsItem.html
@@ -1,3 +1,4 @@
 <tr>
-	<td>{{cars.name}}</td>
+	<td><input type="text" value="{{cars.master}}" /></td>
+	<td><input type="text" value="{{cars.name}}" /></td>
 </tr>
