--- a/yi-web-driveschool/css/bootstrap/platform.css
+++ b/yi-web-driveschool/css/bootstrap/platform.css
@@ -51,3 +51,11 @@ table { border-collapse:collapse; border-spacing:0; }
 	font:20pt bold,"Vollkorn";
 	color:#bbb
 }
+.paging button a{
+	color:white;
+	text-decoration:none;
+}
+.wrong{
+	color: red;
+	font-size: 16px;
+}
