--- a/yi-web-driveschool/template/split.html
+++ b/yi-web-driveschool/template/split.html
@@ -1,7 +1,7 @@
 <div class="paging">
-	<span><a href="/addsignal">添加单个教练</a></span>
-	<span><a href="/addmuch"> 批量添加教练</a></span>
-    <span><a href="/addStutent">添加单个学员</span>
-	<span><a href="/addAllStu">批量添加学员</span>
-	<span><a href="/addAllCars">批量添加教练车</span> 
+	<button type="button" class="btn btn-primary btn-lg"><a href="/addsignal">添加单个教练</a></button>
+	<button type="button" class="btn btn-primary btn-lg"><a href="/addmuch"> 批量添加教练</a></button>
+    <button type="button" class="btn btn-primary btn-lg"><a href="/addStutent">添加单个学员</button>
+	<button type="button" class="btn btn-primary btn-lg"><a href="/addAllStu">批量添加学员</button>
+	<button type="button" class="btn btn-primary btn-lg"><a href="/addAllCars">批量添加教练车</button> 
 </div>
