--- a/yi-web-driveschool/template/muchcoach.html
+++ b/yi-web-driveschool/template/muchcoach.html
@@ -16,10 +16,8 @@
 			</tbody>
 		</table>
 		<button type="submit" ng-click="addAll()">提交教练信息</button>
-		<button type="submit" >提交车辆信息</button>
+		<button type="submit" ng-click="addCar()">提交车辆信息</button>
 		<button type="submit" >绑定教练与车</button>
-</div>
-</div>
 </div>
 <script src="./lib/shim.js"></script>
 <script src="./lib/jszip.js"></script>
