--- a/yi-web-driveschool/template/coachItem.html
+++ b/yi-web-driveschool/template/coachItem.html
@@ -1,7 +1,7 @@
 <tr>
-	<td>{{coach.name}}</td>
-	<td>{{coach.phone}}</td>
-	<td>{{coach.idNumber}}</td>
-	<td>{{coach.type}}</td>
-	<td>{{coach.car}}</td> 
+	<td><input type="text" value="{{coach.name}}"></td>
+	<td><input type="text" value="{{coach.phone}}"></td>
+	<td><input type="text" value="{{coach.idNumber}}"></td>
+	<td><input type="text" value="{{coach.type}}"></td>
+	<td><input type="text" value="{{coach.car}}"></td> 
 </tr>
