--- a/yi-web-driveschool/template/signalcoach.html
+++ b/yi-web-driveschool/template/signalcoach.html
@@ -6,30 +6,31 @@
 			<span>教练身份证</span>
 			<span>是否是挂靠教练(0/1)</span>
 		</div>
-		<form  name="signal_form" novalidate ng-submit="signalForm()" >
-			<input type="text" placeholder="Name"  name="name" ng-model="signal.name" ng-minlength="1" ng-maxlength="20" required />
+		<div  class="new-input" style="display:none"></div>
+		<form  name="signal_form" novalidate ng-submit="signalForm()" id="signal_form">
+			<input type="text" placeholder="Name"  name="name" ng-model="coachList.name" ng-minlength="1" ng-maxlength="20" required />
 			<div class="error" ng-show="signal_form.name.$dirty && signal_form.name.$invalid && signal_form.submitted" >
 				<small class="error" ng-show="signal_form.name.$error.required">sure you enter your name</small>
 				<small class="error" ng-show="signal_form.name.$error.minlength"> your name must be at least 3 characters</small>
 				<small class="error" ng-show="signal_form.name.$error.maxlength">your name can not be longer than 20 characters</small>
 			</div>
-			<input type="text" placeholder="手机号"  name="telphone" ng-model="signal.telphone" ng-minlength="11" ng-maxlength="11" required />
+			<input type="text" placeholder="手机号"  name="telphone" ng-model="coachList.telphone" ng-minlength="11" ng-maxlength="11" required />
 			<div class="error" ng-show="signal_form.telphone.$dirty && signal_form.telphone.$invalid && signal_form.submitted">
-				<small class="error" ng-show="signal_form.telphone.$error.required">sure you enter your idNumber</small>
+				<small class="error" ng-show="signal_form.telphone.$error.required">sure you enter your phone</small>
 				<small class="error" ng-show="signal_form.telphone.$error.minlength"> your name must be at least 11 characters</small>
 				<small class="error" ng-show="signal_form.telphone.$error.maxlength">your name can not be longer than 11 characters</small>
 			</div>
-			<input type="text" placeholder="身份证"  name="idNumber" ng-model="signal.idNumber" ng-minlength="18" ng-maxlength="18" required />
+			<input type="text" placeholder="身份证"  name="idNumber" ng-model="coachList.idNumber" ng-minlength="18" ng-maxlength="18" required />
 			<div class="error" ng-show="signal_form.idNumber.$dirty && signal_form.idNumber.$invalid && signal_form.submitted">
 				<small class="error" ng-show="signal_form.idNumber.$error.required">sure you enter your idNumber</small>
 				<small class="error" ng-show="signal_form.idNumber.$error.minlength"> your name must be at least 18 characters</small>
 				<small class="error" ng-show="signal_form.idNumber.$error.maxlength">your name can not be longer than 18 characters</small>
 			</div>
-			<input type="text" placeholder="(0/1)"  name="type" ng-model="signal.type"  required />
+			<input type="text" placeholder="(0/1)"  name="type" ng-model="coachList.type"  required />
 			<div class="error" ng-show="signal_form.type.$dirty && signal_form.type.$invalid && signal_form.submitted">
 				<small class="error" ng-show="signal_form.type.$error.required">sure you enter your type</small>
 			</div>
-			<button type="submit">Submit</button>
+			<button type="submit" >Submit</button>
 		</form>
 	</div>
 </section>
