--- a/yi-web-driveschool/template/muchcoach.html
+++ b/yi-web-driveschool/template/muchcoach.html
@@ -15,9 +15,10 @@
 				<coach-item ng-repeat="(key,coach) in coachList"></coach-item>
 			</tbody>
 		</table>
-		<button type="submit" ng-click="addAll()">提交教练信息</button>
-		<button type="submit" ng-click="addCar()">提交车辆信息</button>
-		<button type="submit" >绑定教练与车</button>
+		<button type="submit" ng-click="addAll()" >提交教练信息</button>
+		<button type="submit" ng-click="addCar()" >提交车辆信息</button>
+		<button type="submit" ng-click="bindCar()" >绑定教练与车</button>
+		<bind-car ng-repeat="(key,bindCar) in bindCarList" ></bind-car>
 		<error-list ng-repeat="error in errorList" ng-model="errorList"></error-list>
 		<p class="wrong" ng-show="errorList">以上信息已经提交，请修正后重新提交</p>
 </div>
