--- a/yi-web-driveschool/template/stuitem.html
+++ b/yi-web-driveschool/template/stuitem.html
@@ -1,6 +1,5 @@
 <tr>
-	<td>{{student.name}}</td>
-	<td >{{student.phone}}</td>
-	<td>{{student.idNumber}}</td>
-	<td>{{student.coachId}}</td>
+	<td><input type="text" value="{{student.name}}" /></td>
+	<td><input type="text" value="{{student.phone}}" /></td>
+	<td><input type="text" value="{{student.idNumber}}" /></td>
 </tr>
