--- a/yi-web-driveschool/template/split.html
+++ b/yi-web-driveschool/template/split.html
@@ -3,5 +3,6 @@
 	<button type="button" class="btn btn-primary btn-lg"><a href="/addmuch"> 批量添加教练</a></button>
     <button type="button" class="btn btn-primary btn-lg"><a href="/addStutent">添加单个学员</button>
 	<button type="button" class="btn btn-primary btn-lg"><a href="/addAllStu">批量添加学员</button>
-	<button type="button" class="btn btn-primary btn-lg"><a href="/addAllCars">批量添加教练车</button> 
+	<button type="button" class="btn btn-primary btn-lg"><a href="/addAllCars">批量添加教练车</button>
+	<button type="button" class="btn btn-primary btn-lg"><a href="/getGoodNews">获取好评</button>
 </div>
