--- a/yi-web-driveschool/template/split.html
+++ b/yi-web-driveschool/template/split.html
@@ -5,4 +5,6 @@
 	<button type="button" class="btn btn-primary btn-lg"><a href="/addAllStu">批量添加学员</button>
 	<button type="button" class="btn btn-primary btn-lg"><a href="/addAllCars">批量添加教练车</button>
 	<button type="button" class="btn btn-primary btn-lg"><a href="/getGoodNews">获取好评</button>
+	<button type="button" class="btn btn-primary btn-lg"><a href="/getcoach">获取教练</button>
+	<button type="button" class="btn btn-primary btn-lg"><a href="/getstudent">获取学员</button>
 </div>
