--- a/yi-web-driveschool/template/good.html
+++ b/yi-web-driveschool/template/good.html
@@ -1,6 +1,11 @@
 <section>
-	<div class="good" >
-		<good ng-repeat="(key,good) in goodList" ></good>
+	<button class="getgood btn btn-primary btn-lg" ng-click="toGood()">获取好评</button>
+	<div class="coach">
+		{{commentTemp.name}}
 	</div>
-	<button class="getgood btn btn-primary btn-lg" ng-click="getGood()">获取好评</button>
+	<div class="good">
+		<good-item ng-repeat="(key,good) in goodList"  class="goodNews"></good-item>
+	</div>
+	<!-- <button class="btn btn-primary btn-lg"  ng-click="getMoreGood('pre')" ng-disabled="firstPage"> 上一页</button>
+	<button class="btn btn-primary btn-lg"  ng-click="getMoreGood('next')"> 下一页</button> -->
 </section>
