--- a/yi-web-driveschool/template/good.html
+++ b/yi-web-driveschool/template/good.html
@@ -6,6 +6,6 @@
 	<div class="good">
 		<good-item ng-repeat="(key,good) in goodList"  class="goodNews"></good-item>
 	</div>
-	<!-- <button class="btn btn-primary btn-lg"  ng-click="getMoreGood('pre')" ng-disabled="firstPage"> 上一页</button>
-	<button class="btn btn-primary btn-lg"  ng-click="getMoreGood('next')"> 下一页</button> -->
+	<button class="btn btn-primary btn-lg"  ng-click="getMoreGood('pre')" ng-disabled="firstPage"> 上一页</button>
+	<button class="btn btn-primary btn-lg"  ng-click="getMoreGood('next')"> 下一页</button> 
 </section>
