--- a/yi-web-driveschool/template/split.html
+++ b/yi-web-driveschool/template/split.html
@@ -1,3 +1,4 @@
+<forall></forall>
 <div class="paging">
 	<button type="button" class="btn btn-primary btn-lg"><a href="/addsignal">添加单个教练</a></button>
 	<button type="button" class="btn btn-primary btn-lg"><a href="/addmuch"> 批量添加教练</a></button>
