--- a/yi-web-driveschool/template/getstudent.html
+++ b/yi-web-driveschool/template/getstudent.html
@@ -1,5 +1,5 @@
+<forall></forall>
 <section>
-	<button class="getstudent btn btn-primary btn-lg" ng-click="toStudent()">获取教练</button>
 	<div class="sidebar">
 		<span>学员姓名</span><span>学员身份证</span><span>学员电话</span>
 	</div>
