--- a/yi-web-driveschool/template/good.html
+++ b/yi-web-driveschool/template/good.html
@@ -1,3 +1,4 @@
+<forall></forall>
 <section>
 	<button class="getgood btn btn-primary btn-lg" ng-click="toGood()">获取好评</button>
 	<div class="coach">
