--- a/yi-web-driveschool/template/signalcoach.html
+++ b/yi-web-driveschool/template/signalcoach.html
@@ -1,3 +1,4 @@
+<forall></forall>
 <section class="signalcoach">
 	<div class="signal">
 		<div  class="coach_rule">
@@ -14,19 +15,19 @@
 				<small class="error" ng-show="signal_form.name.$error.minlength"> your name must be at least 3 characters</small>
 				<small class="error" ng-show="signal_form.name.$error.maxlength">your name can not be longer than 20 characters</small>
 			</div>
-			<input type="text" placeholder="手机号"  name="telphone" ng-model="coachList.telphone" ng-minlength="11" ng-maxlength="11" required />
+			<input type="text" placeholder="手机号"  name="telphone" ng-model="coachList.telphone" ng-minlength="11" ng-maxlength="11" ng-pattern="/^1[3|5|8|4|7][0-9]\d{4,8}$/" required />
 			<div class="error" ng-show="signal_form.telphone.$dirty && signal_form.telphone.$invalid && signal_form.submitted">
 				<small class="error" ng-show="signal_form.telphone.$error.required">sure you enter your phone</small>
 				<small class="error" ng-show="signal_form.telphone.$error.minlength"> your name must be at least 11 characters</small>
 				<small class="error" ng-show="signal_form.telphone.$error.maxlength">your name can not be longer than 11 characters</small>
 			</div>
-			<input type="text" placeholder="身份证"  name="idNumber" ng-model="coachList.idNumber" ng-minlength="18" ng-maxlength="18" required />
+			<input type="text" placeholder="身份证"  name="idNumber" ng-model="coachList.idNumber" ng-minlength="18" ng-maxlength="18"  ng-pattern="/^\d{17}(\d|x|X)$/" required />
 			<div class="error" ng-show="signal_form.idNumber.$dirty && signal_form.idNumber.$invalid && signal_form.submitted">
 				<small class="error" ng-show="signal_form.idNumber.$error.required">sure you enter your idNumber</small>
 				<small class="error" ng-show="signal_form.idNumber.$error.minlength"> your name must be at least 18 characters</small>
 				<small class="error" ng-show="signal_form.idNumber.$error.maxlength">your name can not be longer than 18 characters</small>
 			</div>
-			<input type="text" placeholder="(0/1)"  name="type" ng-model="coachList.type"  required />
+			<input type="text" placeholder="(0/1)"  name="type" ng-model="coachList.type" ng-pattern="/[0-2]+/"  required />
 			<div class="error" ng-show="signal_form.type.$dirty && signal_form.type.$invalid && signal_form.submitted">
 				<small class="error" ng-show="signal_form.type.$error.required">sure you enter your type</small>
 			</div>
