--- a/yi-web-driveschool/template/forall.html
+++ b/yi-web-driveschool/template/forall.html
@@ -1,5 +1,20 @@
-<div class="container">
-	<span>首页</span>
-	<span>添加教练</span>
-	<span>添加学员</span>
-</div>
+<div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" style="color:white" href="/split">益驾驾校管理系统</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/addStutent" class="navli">添加单个学员</a></li>
+        <li><a href="/addAllStu" class="navli" >批量添加学员</a></li>
+        <li><a href="/addsignal" class="navli" >添加单个教练</a></li>
+        <li><a href="/addmuch" class="navli" >批量添加教练</a></li>
+        <li><a href="/getcoach" class="navli" >获取教练</a></li>
+        <li><a href="/getstudent" class="navli" >获取学员</a></li>
+        <li><a href="/getGoodNews" class="navli" >获取好评</a></li>
+        <li><a href="#" class="navli">获取差评</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/login">登录</a></li>
+      </ul>
+    </div>
+ </div>
