--- a/yi-web-driveschool/template/getcoach.html
+++ b/yi-web-driveschool/template/getcoach.html
@@ -1,5 +1,5 @@
+<forall></forall>
 <section>
-	<button class="getcoach btn btn-primary btn-lg" ng-click="toCoach()">获取教练</button>
 	<div class="sidebar">
 		<span>教练姓名</span><span>教练身份证</span><span>教练电话</span><span>是否挂靠教练(0/1)</span>
 	</div>
