--- a/yi-web-driveschool/css/bootstrap/platform.css
+++ b/yi-web-driveschool/css/bootstrap/platform.css
@@ -1,6 +1,5 @@
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin:0; padding:0; } 
 body, button, input, select, textarea { font:12px/1.5tahoma, arial, \5b8b\4f53; } 
-h1, h2, h3, h4, h5, h6{ font-size:100%; } 
 address, cite, dfn, em, var { font-style:normal; } 
 code, kbd, pre, samp { font-family:couriernew, courier, monospace; } 
 small{ font-size:12px; } 
@@ -92,10 +91,25 @@ table { border-collapse:collapse; border-spacing:0; }
 /* .goodNews{
 	display: block;
 } */
-.container-fluid{
+.container{
 	border-radius: 5px;
-	background-color:#00BFFF;
+	/*background-color:#DCDCDC;*/
 }
 .nav li a{
 	color:white;
+}
+.specile{
+	margin-top:10px;
+}
+h1{
+	text-align: center;
+	margin-top: 10px;
+	color: #00BFFF;
+}
+h2{
+	text-align: center;
+	margin-top: 10px;
+}
+body{
+	background-color:#FFFF00;
 }
