--- a/yi-web-driveschool/template/forall.html
+++ b/yi-web-driveschool/template/forall.html
@@ -1,8 +1,8 @@
-<div class="container-fluid">
-    <div class="navbar-header">
+<div class="container">
+    <div class="navbar-header" style="background-color:#00BFFF;">
       <a class="navbar-brand" style="color:white" href="/split">益驾驾校管理系统</a>
     </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background-color:#00BFFF;">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/addStutent" class="navli">添加单个学员</a></li>
         <li><a href="/addAllStu" class="navli" >批量添加学员</a></li>
