--- a/yi-web-driveschool/template/allStudent.html
+++ b/yi-web-driveschool/template/allStudent.html
@@ -1,24 +1,26 @@
 <forall></forall>
-<div class="output" all-student>
-	Output Format:
-		<select name="format">
-		<option value="json" ng-model="student.value" selected> JSON</option>
-		</select><br />
-		<div id="drop"  >拖动excel文件到此位置</div>
-		<div class="duoyu" style="display:none">
-		Advanced Demo Options: <br />
-		Use Web Workers: (when available) <input type="checkbox" name="useworker"  ng-model="student.useworker.checked" ng-disabled="student.useworker.disabled"><br/>
-		Use Transferrables: (when available) <input type="checkbox" name="xferable"  ng-model="student.xferable.checked" ng-disabled="student.xferable.disabled"><br/>
-		Use readAsBinaryString: (when available) <input type="checkbox" name="userabs"  ng-model="student.userabs.checked" ng-disabled="student.userabs.disabled"><br/>
-		</div>
-		<table>
-			<tbody>
-				<student-item ng-repeat="(key,student) in studentList"></student-item>
-			</tbody>
-		</table>
-		<button type="submit" ng-click="addAll()">确认提交</button>
-		<error-list ng-repeat="error in errorList" ng-model="errorList"></error-list>
-		<p class="wrong" ng-show="errorList">以上信息已经提交，请修正后重新提交</p>
+<div class="container">
+	<div class="output" all-student>
+		Output Format:
+			<select name="format">
+			<option value="json" ng-model="student.value" selected> JSON</option>
+			</select><br />
+			<div id="drop"  >拖动excel文件到此位置</div>
+			<div class="duoyu" style="display:none">
+			Advanced Demo Options: <br />
+			Use Web Workers: (when available) <input type="checkbox" name="useworker"  ng-model="student.useworker.checked" ng-disabled="student.useworker.disabled"><br/>
+			Use Transferrables: (when available) <input type="checkbox" name="xferable"  ng-model="student.xferable.checked" ng-disabled="student.xferable.disabled"><br/>
+			Use readAsBinaryString: (when available) <input type="checkbox" name="userabs"  ng-model="student.userabs.checked" ng-disabled="student.userabs.disabled"><br/>
+			</div>
+			<table>
+				<tbody>
+					<student-item ng-repeat="(key,student) in studentList"></student-item>
+				</tbody>
+			</table>
+			<button type="submit" ng-click="addAll()">确认提交</button>
+			<error-list ng-repeat="error in errorList" ng-model="errorList"></error-list>
+			<p class="wrong" ng-show="errorList">以上信息已经提交，请修正后重新提交</p>
+	</div>
 </div>
 <script src="./lib/shim.js"></script>
 <script src="./lib/jszip.js"></script>
