--- a/yi-web-driveschool/template/getBadNews.html
+++ b/yi-web-driveschool/template/getBadNews.html
@@ -1,9 +1,11 @@
 <section>
-	<button class="getbad btn btn-primary btn-lg" ng-click="toBad()">获取差评</button>
-	<div class="badNews">
-		{{commentTemp.name}}
-	</div>
-	<div class="good">
-		<bad-item ng-repeat="(key,good) in goodList"  class="goodNews"></bad-item>
+	<div class="container">
+		<button class="getbad btn btn-primary btn-lg" ng-click="toBad()">获取差评</button>
+		<div class="badNews">
+			{{commentTemp.name}}
+		</div>
+		<div class="good">
+			<bad-item ng-repeat="(key,good) in goodList"  class="goodNews"></bad-item>
+		</div>
 	</div>
 </section>
