--- a/yj-web-platform/template/addjobs.html
+++ b/yj-web-platform/template/addjobs.html
@@ -6,10 +6,10 @@
 				<input type="text" placeholder="职位名字" ng-model="jobs.name" />
 				<br>
 				<label>职位描述</label>
-				<input type="text" placeholder="职位描述" ng-model="jobs.describle" />
+				<textarea type="text" placeholder="职位描述" ng-model="jobs.describle" ></textarea>
 				<br>
 				<label>职位职责</label>
-				<input type="text" placeholder="职位职责" ng-model="jobs.duty" />
+				<textarea type="text" placeholder="职位职责" ng-model="jobs.duty" ></textarea>
 				<br>
 				<label>职位工资</label>
 				<input type="text" placeholder="职位工资" ng-model="jobs.pay" />
@@ -17,6 +17,7 @@
 				<label>职位图片</label>
 				<input  ng-model="jobs.imgName"  type="text" placeholder="职位图片" /> 
 				<br>
+				<button type="submit">提交</button>
 			</form>
 		</div>
 	</div>
