--- a/yj-web-platform/template/upLoadImg.html
+++ b/yj-web-platform/template/upLoadImg.html
@@ -1,14 +1,32 @@
 <section>
-	imagename
-    <input type="text" ng-model="imagename"></br>
     <p class="should">watching model:</p>
     <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
     Select File:
     <div class="filechange" ngf-select ngf-change="upload($files)" ngf-multiple="multiple">Select File</div>
-	<!-- Files:
-	<ul>
-	    	<li ng-repeat="f in files" style="font:smaller">{{f.name}}</li>
-	</ul> -->
 	Upload Log:
 	<pre>{{log}}</pre>
+	<div class="container">
+		<div class="addjobs">
+			<div class="jobs_detile">
+				<form name="jobs_form" novalidate ng-submit="jobsForm()">
+					<label>职位名字</label>
+					<input type="text" placeholder="职位名字" ng-model="jobs.name" />
+					<br>
+					<label>职位描述</label>
+					<textarea type="text" placeholder="职位描述" ng-model="jobs.describle" ></textarea>
+					<br>
+					<label>职位职责</label>
+					<textarea type="text" placeholder="职位职责" ng-model="jobs.duty" ></textarea>
+					<br>
+					<label>职位工资</label>
+					<input type="text" placeholder="职位工资" ng-model="jobs.pay" />
+					<br>
+					<label>职位图片</label>
+					<input  ng-model="jobs.imgName"  type="text" placeholder="职位图片" /> 
+					<br>
+					<button type="submit">提交</button>
+				</form>
+			</div>
+		</div>
+	</div>
 </section>
