--- a/yj-web-platform/template/jobList.html
+++ b/yj-web-platform/template/jobList.html
@@ -9,7 +9,7 @@
 			<p>{{job.duty}}</p>
 			<p>{{job.pay}}</p>
 		</div>
-		<input type="button" class="glyphicon glyphicon-remove" ng-click="deleteJob(job.id)" ></input>
+		<button type="button" class="glyphicon glyphicon-remove" ng-click="deleteJob(job.id)" ></button>
 	</div>
 	
 </div>
