--- a/yj-web-platform/template/views.html
+++ b/yj-web-platform/template/views.html
@@ -1,2 +1,5 @@
-<span>{{tester._id}}</span>
-<span>{{tester.email}}</span>
+<div class="tester_detile">
+	<span>{{tester._id}}</span>
+	<span class="test_span">{{tester.email}}</span>
+</div>
+<br/>
